[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[package]
name = "aoc-2023"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day-1 = {path = "crates/day-1"}
day-2 = {path = "crates/day-2"}
day-3 = {path = "crates/day-3"}
day-4 = {path = "crates/day-4"}
