[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[package]
name = "aoc-2023"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day-1 = {path = "crates/day-1"}
day-2 = {path = "crates/day-2"}
day-3 = {path = "crates/day-3"}
day-4 = {path = "crates/day-4"}
day-5 = {path = "crates/day-5"}
day-6 = {path = "crates/day-6"}
day-7 = {path = "crates/day-7"}
day-8 = {path = "crates/day-8"}
day-9 = {path = "crates/day-9"}
day-10 = {path = "crates/day-10"}
day-11 = {path = "crates/day-11"}
